--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,8 @@ body {
 }
 
 .card .main-image {
-    background-image: url(../images/image-equilibrium.jpg);
-    background-size: contain;
+    background: url(../images/image-equilibrium.jpg) center;
+    background-size: cover;
     width: 100%;
     height: 300px;
     border-radius: 10px;
@@ -52,8 +52,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url(../images/icon-view.svg) no-repeat center;
-    background-color: rgba(0,255,255,0.5);
+    background: rgba(0,255,255,0.5) url(../images/icon-view.svg) no-repeat center;
     border-radius: 10px;
     z-index: -1;
 }
